fix design on narrow devices with chromium

--- a/sober/static/sober/sober-base.css
+++ b/sober/static/sober/sober-base.css
@@ -102,9 +102,9 @@ code {
     margin-top: -10px;
     margin-right: auto;
     margin-left: auto;
-/*     max-width: 960px; */
-    max-width: 40em;
-    background-color: #FAFAFB;
+    width: 90vw;
+    max-width: 35em;
+    background-color: #FAFAFA;
 }
 
 .box_base {
